# rover_nav

./: CMakeLists.txt  README.md  commands.txt  requirements.txt
CSVs/: .~lock.Diagnosis_of_ordrives_onGround.csv#  D.csv  DIagnosis_of_odrives.csv  DIagnosis_of_odrives.xml  Diagnosis_of_ordrives_onGround_3Rotation_worked.csv  Diagnosis_of_ordrives_onGround_5Rotations.csv  b0be1c1b-0ed6-477f-a65f-619ce5d32c87
Probe_detection/: capture.py
config/: ekf_config.yaml
launch/: LeaopOne_joy_launch.py  LeapOne_Safety_launch.py  localization.launch.py
scripts/: LeapOne_test_encoders.py  Odom.py  Rover_control_Joy.py  joy_safety.py  rover_controller_pure_pursuit.py
scripts/Rover_path_controller/: Pure_pursuit_Gazebo.py  obstacle_detector_node.py
